--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Web portfolio for Andrew Hawileh."
     />
     <title>Andrew Hawileh</title>
   </head>
